<resources>
    <string name="app_name">D\'Williams Bienes Raices</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_real_estates">Inmuebles</string>
    <string name="menu_tenants">Inquilinos</string>
    <string name="menu_contracts">Contratos</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <string name="label_editText_email">Correo electrónico</string>
    <string name="label_editText_pass">Contraseña</string>
    <string name="button_text_login">Ingresar</string>
    <string name="textView_loginError">Usuario y/o contraseña incorrectos</string>
    <string name="contract_codigo_label">Código de Contrato</string>
    <string name="fecha_de_inicio_label">Fecha de Inicio</string>
    <string name="fecha_de_fin_label">Fecha de Fin</string>
    <string name="monto_de_alquiler_label">Monto de Alquiler</string>
    <string name="inquilino_label">Inquilino</string>
    <string name="inmueble_label">Inmueble</string>
    <string name="pagos_label">Pagos</string>
    <string name="email_label">Correo electrónico</string>
    <string name="nombre_label">Nombre</string>
    <string name="apellido_label">Apellido</string>
    <string name="dni_label">DNI</string>
    <string name="tel_label">Teléfono</string>
    <string name="pass_label">Contraseña</string>
    <string name="save_label">Guardar</string>
    <string name="edit_label">Editar</string>
    <string name="datos_guardados_msg">Datos guardados</string>
    <string name="direccion_label">Dirección</string>
    <string name="precio_label">Precio</string>
    <string name="tipo_label">Tipo</string>
    <string name="uso_label">Uso</string>
    <string name="ambientes_label">Ambientes</string>
    <string name="propietario_label">Propietario</string>
    <string name="disponibilidad_label">Disponibile</string>
    <string name="nombre_y_apellido_label">Nombre y Apellido</string>
    <string name="lugar_de_trabajo_label">Lugar de Trabajo</string>
    <string name="nombre_del_garante_label">Nombre del Garante</string>
    <string name="tel_garante_label">Teléfono del Garante</string>
    <string name="pago_codigo_label">Código de Pago</string>
    <string name="pago_num_label">Número de Pago</string>
    <string name="importe_label">Importe</string>
    <string name="fecha_de_pago_label">Fecha de Pago</string>
    <string-array name="tipos_inmueble">
        <item>Local</item>
        <item>Depósito</item>
        <item>Casa</item>
        <item>Depto</item>
        <item>Otros</item>
    </string-array>
    <string-array name="usos_inmueble">
        <item>Comercial</item>
        <item>Residencial</item>
    </string-array>
</resources>