<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context=".ui.realestates.RealEstateDetailsFragment"
        android:background="@color/white"
        android:paddingTop="8dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/direccion_label"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/labelPrecio"
            android:labelFor="@id/tvPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/precio_label"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"/>

        <TextView
            android:id="@+id/tvPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/precio_label"
            android:justificationMode="inter_word"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/labelTipo"
            android:labelFor="@id/tvTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo_label"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"/>

        <TextView
            android:id="@+id/tvTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/tipo_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/labelUso"
            android:labelFor="@id/tvUso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uso_label"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"/>

        <TextView
            android:id="@+id/tvUso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/uso_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/labelAmbientes"
            android:labelFor="@id/tvAmbientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ambientes_label"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"/>

        <TextView
            android:id="@+id/tvAmbientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/ambientes_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/labelPropietario"
            android:labelFor="@id/tvPropietario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/propietario_label"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"/>

        <TextView
            android:id="@+id/tvPropietario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/propietario_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/labelDisponible"
            android:labelFor="@id/cbDisponible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disponibilidad_label"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"/>

        <CheckBox
            android:id="@+id/cbDisponible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/disponibilidad_label" />

    </LinearLayout>
</ScrollView>
