<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context=".ui.tenants.TenantDetailsFragment"
        android:background="@color/white"
        android:layout_margin="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/labelNombreApellido"
            android:labelFor="@id/tvNombreApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_y_apellido_label"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"/>

        <TextView
            android:id="@+id/tvNombreApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="8dp"
            android:text="@string/nombre_y_apellido_label"
            android:textColor="#1B1B1B"
            android:justificationMode="inter_word"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/labelDni"
            android:labelFor="@id/tvDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dni_label"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"/>

        <TextView
            android:id="@+id/tvDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="8dp"
            android:text="@string/dni_label"
            android:textColor="#1B1B1B"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/labelEmailAddress"
            android:labelFor="@id/tvEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"/>

        <TextView
            android:id="@+id/tvEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="8dp"
            android:text="@string/email_label"
            android:textColor="#1B1B1B"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/labelTel"
            android:labelFor="@id/tvTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tel_label"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"/>

        <TextView
            android:id="@+id/tvTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="8dp"
            android:text="@string/tel_label"
            android:textColor="#1B1B1B"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/labelTrabajo"
            android:labelFor="@id/tvTrabajo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lugar_de_trabajo_label"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"/>

        <TextView
            android:id="@+id/tvTrabajo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="8dp"
            android:text="@string/lugar_de_trabajo_label"
            android:textColor="#1B1B1B"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>
